# rembg-openai-api

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  update-rembg.yml
app/: cli.py  config.py  download_proxy.py  errors.py  file_store.py  image_input.py  main.py  models_registry.py  rembg_service.py  schemas.py
docs/superpowers/plans/: 2026-07-14-rembg-openai-api.md
scripts/: download_models.sh
tests/: conftest.py  test_api.py  test_api_extra.py  test_cli_models.py  test_concurrency.py  test_config.py  test_download_proxy.py  test_errors.py  test_file_store.py  test_json_image_input.py  test_models_registry.py  test_rembg_service.py
