[project]
name = "rembg-openai-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # pin modern numba first: rembg→pymatting pulls numba==0.53 which breaks Py3.12
    "numba>=0.60",
    "rembg[cpu]>=2.0.76",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
models = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
